<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#014A73"
    android:fitsSystemWindows="true"
    app:popupTheme="@style/AppTheme.NoActionBar"
    tools:context=".RegisterLogin.LoginActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/AppBar_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#014A73"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#014A73">

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo"
            android:ellipsize="marquee"
            android:fontFamily="@font/roboto"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:src="@drawable/logo_lokermu"
            android:textColor="@color/colorText"
            android:textSize="17sp"
            android:textStyle="bold" />
    </LinearLayout>


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_below="@id/logo"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/logo"
        android:background="#D0D7F9">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#D0D7F9"
            android:gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_view_login"
                    android:layout_width="370dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="2dp"
                    app:cardBackgroundColor="@color/putih"
                    app:cardCornerRadius="12dp">

                    <RelativeLayout
                        android:id="@+id/rv_title_login"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <RelativeLayout
                            android:id="@+id/judul_login"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:id="@+id/textlogin"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="30dp"
                                android:layout_marginTop="30dp"
                                android:layout_marginEnd="40dp"
                                android:fontFamily="@font/montserrat_bold"
                                android:gravity="start"
                                android:text="Wujudkan pekerjaanmu"
                                android:textColor="#0E527B"
                                android:textSize="33sp" />
                        </RelativeLayout>

                        <RelativeLayout
                            android:id="@+id/input_email_kata_sandi"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/judul_login"
                            android:layout_marginTop="20dp">

                            <EditText
                                android:id="@+id/et_email_login"
                                android:layout_width="match_parent"
                                android:layout_height="50dp"
                                android:layout_marginStart="30dp"
                                android:layout_marginTop="20dp"
                                android:layout_marginEnd="30dp"
                                android:background="@drawable/border_edit_text"
                                android:fontFamily="@font/roboto"
                                android:gravity="center_vertical"
                                android:hint="Email"
                                android:maxLines="1"
                                android:inputType="textEmailAddress"
                                android:lines="1"
                                android:paddingStart="10dp"
                                android:paddingEnd="10dp"
                                android:textColor="@color/colorText"
                                android:textSize="15sp"
                                tools:ignore="RtlSymmetry" />


                            <EditText
                                android:id="@+id/et_kata_sandi_login"
                                android:layout_width="match_parent"
                                android:layout_height="50dp"
                                android:layout_below="@+id/et_email_login"
                                android:layout_marginStart="30dp"
                                android:layout_marginTop="40dp"
                                android:layout_marginEnd="30dp"
                                android:background="@drawable/border_edit_text"
                                android:enabled="true"
                                android:fontFamily="@font/roboto"
                                android:gravity="center_vertical"
                                android:hint="Kata sandi"
                                android:inputType="textPassword"
                                android:maxLines="1"
                                android:lines="1"
                                android:paddingStart="10dp"
                                android:paddingEnd="10dp"
                                android:textColor="@color/colorText"
                                android:textSize="15sp"
                                tools:ignore="RtlSymmetry" />
                        </RelativeLayout>


                        <LinearLayout
                            android:id="@+id/linear_layout_lupa_katasandi"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/input_email_kata_sandi"
                            android:layout_alignParentEnd="true"
                            android:layout_marginTop="20dp"
                            android:gravity="end"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/lupa_kata_sandi"
                                style="@style/viewParent"
                                android:layout_gravity="end"
                                android:layout_marginTop="10dp"
                                android:layout_marginEnd="30dp"
                                android:fontFamily="@font/roboto"
                                android:text="Lupa kata sandi"
                                android:textColor="#014A73"
                                android:textSize="15sp" />

                        </LinearLayout>

                        <Button
                            android:id="@+id/btn_login"
                            android:layout_width="180dp"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/linear_layout_lupa_katasandi"
                            android:layout_centerHorizontal="true"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="50dp"
                            android:background="@drawable/backg_button"
                            android:fontFamily="@font/roboto_medium"
                            android:letterSpacing="0.2"
                            android:text="Masuk"
                            android:textAllCaps="false"
                            android:textColor="@color/putih"
                            android:textSize="19sp" />

                        <LinearLayout
                            android:id="@+id/linear_layout_alternatif_login"
                            android:layout_width="match_parent"
                            android:layout_height="110dp"
                            android:layout_below="@+id/btn_login"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/img_fb"
                                android:layout_width="60dp"
                                android:layout_height="60dp"
                                android:layout_gravity="center"
                                android:layout_marginStart="20dp"
                                android:layout_marginEnd="20dp"
                                android:src="@drawable/ic_facebook" />

                            <ImageView
                                android:layout_width="60dp"
                                android:layout_height="60dp"
                                android:layout_gravity="center"
                                android:layout_marginStart="20dp"
                                android:layout_marginEnd="20dp"
                                android:src="@drawable/ic_google" />

                            <ImageView
                                android:layout_width="60dp"
                                android:layout_height="60dp"
                                android:layout_gravity="center"
                                android:layout_marginStart="20dp"
                                android:layout_marginEnd="20dp"
                                android:src="@drawable/ic_whatsapp" />
                        </LinearLayout>

                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="30dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_belum_punya_akun"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginStart="20dp"
                        android:fontFamily="@font/ubuntu"
                        android:gravity="center"
                        android:text="@string/belum_punya_akun"
                        android:textColor="#1A1C4D"
                        android:textSize="16sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/tv_daftar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignEnd="@id/tv_belum_punya_akun"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="20dp"
                        android:fontFamily="@font/ubuntu"
                        android:gravity="center"
                        android:text="@string/daftar"
                        android:textColor="#1A1C4D"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </RelativeLayout>


            </LinearLayout>
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</RelativeLayout>